@@ -130,7 +130,7 @@ message SignTx {
     optional uint32 version = 4 [default=1];            // transaction version
     optional uint32 lock_time = 5 [default=0];          // transaction lock_time
     optional uint32 expiry = 6;                         // only for Decred and Zcash
-    // optional bool overwintered = 7;                  // deprecated - only for Zcash
+    optional bool _overwintered = 7 [deprecated=true];   // deprecated in 2.3.2, the field is not needed as it can be derived from `version`
     optional uint32 version_group_id = 8;               // only for Zcash, nVersionGroupId
     optional uint32 timestamp = 9;                      // only for Peercoin
     optional uint32 branch_id = 10;                     // only for Zcash, BRANCH_ID
@@ -196,7 +196,7 @@ message TxAck {
         optional bytes extra_data = 8;          // only for Dash, Zcash
         optional uint32 extra_data_len = 9;     // only for Dash, Zcash
         optional uint32 expiry = 10;            // only for Decred and Zcash
-        // optional bool overwintered = 11;     // deprecated - only for Zcash
+        optional bool _overwintered = 11 [deprecated=true];   // Zcash only; deprecated in 2.3.2, the field is not needed, it can be derived from `version`
         optional uint32 version_group_id = 12;  // only for Zcash, nVersionGroupId
         optional uint32 timestamp = 13;         // only for Peercoin
         optional uint32 branch_id = 14;         // only for Zcash, BRANCH_ID
