@@ -16,17 +16,14 @@ class PassphraseAck(p.MessageType):
     def __init__(
         self,
         passphrase: str = None,
-        _state: bytes = None,
         on_device: bool = None,
     ) -> None:
         self.passphrase = passphrase
-        self._state = _state
         self.on_device = on_device
 
     @classmethod
     def get_fields(cls) -> Dict:
         return {
             1: ('passphrase', p.UnicodeType, 0),
-            2: ('_state', p.BytesType, 0),
             3: ('on_device', p.BoolType, 0),
         }
