@@ -21,6 +21,7 @@ class SignTx(p.MessageType):
         version: int = None,
         lock_time: int = None,
         expiry: int = None,
+        _overwintered: bool = None,
         version_group_id: int = None,
         timestamp: int = None,
         branch_id: int = None,
@@ -31,6 +32,7 @@ class SignTx(p.MessageType):
         self.version = version
         self.lock_time = lock_time
         self.expiry = expiry
+        self._overwintered = _overwintered
         self.version_group_id = version_group_id
         self.timestamp = timestamp
         self.branch_id = branch_id
@@ -44,6 +46,7 @@ class SignTx(p.MessageType):
             4: ('version', p.UVarintType, 0),  # default=1
             5: ('lock_time', p.UVarintType, 0),  # default=0
             6: ('expiry', p.UVarintType, 0),
+            7: ('_overwintered', p.BoolType, 0),
             8: ('version_group_id', p.UVarintType, 0),
             9: ('timestamp', p.UVarintType, 0),
             10: ('branch_id', p.UVarintType, 0),
